# api/users.go
@@ -1,41 +1,79 @@
 package api
 
 import (
+	"context"
 	"dermsnap/api/http"
+	"dermsnap/middleware"
 	"dermsnap/models"
-
-	"github.com/gofiber/fiber/v2"
 )
 
-func (a API) Me(c *fiber.Ctx) error {
-	user := c.Locals("user").(*models.User)
-	return c.Status(fiber.StatusOK).JSON(fiber.Map{"user": user})
+func (a API) Me(ctx context.Context, request http.MeRequestObject) (http.MeResponseObject, error) {
+	user := ctx.Value(middleware.UserKey).(*models.User)
+	return http.Me200JSONResponse(*user), nil
 }
 
-func (a API) GetUserInfo(c *fiber.Ctx, userId http.UserId) error {
-	user := c.Locals("user").(*models.User)
-	if user.Role != models.Admin && user.ID.String() != userId.String() {
-		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{"error": "unauthorized"})
+func (a API) GetUserInfo(ctx context.Context, request http.GetUserInfoRequestObject) (http.GetUserInfoResponseObject, error) {
+	user := ctx.Value(middleware.UserKey).(*models.User)
+	if user.ID != request.UserId {
+		return http.GetUserInfo401JSONResponse{
+			Message: "Unauthorized",
+		}, nil
 	}
-	userInfo, err := a.services.UserService.GetUserInfo(userId)
+	userInfo, err := a.services.UserService.GetUserInfo(request.UserId)
 	if err != nil {
-		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
+		return http.GetUserInfo500JSONResponse{
+			Message: err.Error(),
+		}, nil
 	}
-	return c.Status(fiber.StatusOK).JSON(userInfo)
+	return http.GetUserInfo200JSONResponse(*userInfo), nil
 }
 
-func (a API) CreateUserInfo(c *fiber.Ctx, userId http.UserId) error {
-	user := c.Locals("user").(*models.User)
-	if user.Role != models.Admin && user.ID.String() != userId.String() {
-		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{"error": "unauthorized"})
+func (a API) CreateUserInfo(ctx context.Context, request http.CreateUserInfoRequestObject) (http.CreateUserInfoResponseObject, error) {
+	user := ctx.Value(middleware.UserKey).(*models.User)
+	if user.ID != request.UserId {
+		return http.CreateUserInfo401JSONResponse{
+			Message: "Unauthorized",
+		}, nil
 	}
-	var createUserInfo models.CreateUserInfo
-	if err := c.BodyParser(&createUserInfo); err != nil {
-		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": err.Error()})
-	}
-	userInfo, err := a.services.UserService.CreateUserInfo(userId, createUserInfo)
+
+	userInfo, err := a.services.UserService.CreateUserInfo(request.UserId, *request.Body)
 	if err != nil {
-		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
+		return http.CreateUserInfo500JSONResponse{
+			Message: err.Error(),
+		}, nil
 	}
-	return c.Status(fiber.StatusOK).JSON(userInfo)
+	return http.CreateUserInfo200JSONResponse(*userInfo), nil
+}
+
+func (a API) GetDoctorInfo(ctx context.Context, request http.GetDoctorInfoRequestObject) (http.GetDoctorInfoResponseObject, error) {
+	user := ctx.Value(middleware.UserKey).(*models.User)
+	if user.Role != models.Admin && user.ID != request.UserId {
+		return http.GetDoctorInfo401JSONResponse{
+			Message: "Unauthorized",
+		}, nil
+	}
+	doctorInfo, err := a.services.UserService.GetDoctorInfo(request.UserId)
+	if err != nil {
+		return http.GetDoctorInfo500JSONResponse{
+			Message: err.Error(),
+		}, nil
+	}
+	return http.GetDoctorInfo200JSONResponse(*doctorInfo), nil
+}
+
+func (a API) CreateDoctorInfo(ctx context.Context, request http.CreateDoctorInfoRequestObject) (http.CreateDoctorInfoResponseObject, error) {
+	user := ctx.Value(middleware.UserKey).(*models.User)
+	if user.Role != models.Admin && user.ID != request.UserId {
+		return http.CreateDoctorInfo401JSONResponse{
+			Message: "Unauthorized",
+		}, nil
+	}
+
+	userInfo, err := a.services.UserService.CreateDoctorInfo(request.UserId, *request.Body)
+	if err != nil {
+		return http.CreateDoctorInfo500JSONResponse{
+			Message: err.Error(),
+		}, nil
+	}
+	return http.CreateDoctorInfo200JSONResponse(*userInfo), nil
 }
